fixed margin for projects stats on mobile

--- a/resources/css/light-theme.css
+++ b/resources/css/light-theme.css
@@ -174,6 +174,10 @@ footer .link-style-1:active {
         width: 100px;
         height: 100px;
     }
+
+    .project-stats h2 {
+        margin-top: 20px;
+    }
 }
 
 /* Large devices and lower =<lg */
